# Freebuff2API-Optimized

./: .env.example  .gitignore  Dockerfile  README.md  freebuff2api-admin.service  install-admin.sh  pyproject.toml
.github/workflows/: docker.yml
admin/backend/: auth.py  config_manager.py  main.py  requirements.txt
admin/frontend/: index.html
admin/frontend/css/: style.css
admin/frontend/js/: app.js
freebuff2api/: app.py  codebuff.py  config.py  logging_config.py  openai_compat.py
tests/: test_app_errors.py  test_codebuff_client.py  test_config.py  test_openai_compat.py  test_sessions.py  test_streaming.py
tool/web/static/: style.css
tool/web/templates/: index.html
